mobile spacing fix

--- a/src/assets/styling/_newsroomArticle.scss
+++ b/src/assets/styling/_newsroomArticle.scss
@@ -209,7 +209,8 @@
 
             .newsroom-article-header {
                 max-width: 327px;
-                padding-top: 100px;
+                padding-top: 75px;
+                padding-bottom: 15px;
 
                 h1 {
                     font-size: 32px;
@@ -218,24 +219,24 @@
                 }
 
                 .newsroom-article-profile {
-                    padding-top: 20px;
+                    padding-top: 25px;
     
                     img {
-                        width: 38px;
-                        height: 38px;
+                        width: 40px;
+                        height: 40px;
                         border-radius: 1000px;
                     }
     
                     .newsroom-article-date {
-                        padding-top: 3px;
+                        padding-top: 2px;
                         padding-left: 12px;
     
                         h2 {
-                            font-size: 12px;  
+                            font-size: 13px;  
                         }
     
                         p {
-                            font-size: 10px;
+                            font-size: 11px;
                         }
                     }
                 }
@@ -272,8 +273,8 @@
                 padding: 0px;
     
                 p {
-                    font-size: 16px;
-                    line-height: 25px;
+                    font-size: 17px;
+                    line-height: 27px;
                     margin-bottom: 15px;
                 }
     
